Fix overflow in popup

--- a/src/style.css
+++ b/src/style.css
@@ -120,14 +120,16 @@ textarea,
 .popup {
   display: none;
   position: absolute;
-  inset: 0 0 -20px 0;
+  inset: 0;
+  padding: 10px;
+  height: 100vh;
+  overflow-y: scroll;
   background: #fff;
   flex-direction: column;
 }
 
 .popup-modal {
   height: 100%;
-  overflow-y: scroll;
 }
 
 .close {
